--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,5 @@
-certifi==2024.2.2
-charset-normalizer==3.3.2
-idna==3.7
-Naked==0.1.32
+tqdm~=4.66.5
 prettytable~=3.5.0
-pycryptodome==3.20.0
-PyYAML==6.0.1
-requests==2.31.0
-shellescape==3.8.1
-urllib3==2.2.1
-wcwidth==0.2.13
+pycryptodome~=3.20.0
+requests~=2.32.0
 flask~=3.0.3
